# cade-voice-core

./: .env.example  .gitignore  PLAN.md  PROJECT_DESCRIPTION.md  USAGE_GUIDE.md  asr-promote-plan.md  menu.yml  pyproject.toml  requirements.txt
cade/: __init__.py  cli.py  config.py  controller.py
cade/agent/: graph.py  state.py
cade/asr/: __init__.py  engine.py  text_norm.py
cade/body/: __init__.py  robot.py  robot_interface.py  safety.py  world_state.py
cade/brain/: __init__.py  context.py  llm_client.py  prompts.py  response_formats.py  router.py  schema_export.py  schemas.py  structured_backend.py
cade/fsm/: __init__.py  cli.py  config.py  diagnostics.py  events.py  full_pipeline_standalone.py  full_pipeline_test.py  graph_export.py  input_classifier.py  menu_context.py  order_fsm.py  order_parser.py  states.py  voice_runtime.py  zmq_runtime.py
cade/fsm/parsing/: pipeline.py  (+3 more)
cade/tts/: __init__.py  audio_utils.py  cache.py  chunker.py  engine.py  normalizer.py  playback.py  router.py
cade/voice/: __init__.py  session.py
evals/audio/: manifest.json
evals/bootstrap/: README.md  asr_noise.jsonl  general_action.jsonl  order_check.jsonl  order_listen.jsonl  safety.jsonl
scripts/: audio_monitor.py  check_llm_structured_capabilities.py  download_voice_models.sh  eval_audio_replay.py  eval_llm.py  test_nemotron_wav.py
sub-FSM/: README.md
sub-FSM-supplement/: README.md  main.py  run_task5_all.sh
tests/: conftest.py  test_asr_text_norm.py  test_controller.py  test_input_pipeline.py  test_llm_client.py  test_llm_cross_validation.py  test_order_e2e_entrypoint.py  test_order_fsm.py  test_order_fsm_unexpected_inputs.py  test_order_parser.py  test_order_reliability.py  test_order_voice_entrypoint.py  test_phase4.py  test_ros_free.py  test_safety_gate.py  test_speaking_gate_echo.py  test_structured_backend.py  test_structured_output.py  test_tts_upgrade.py  test_voice_session.py  test_zmq_runtime.py
(+17 files in other folders)
