[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cade-voice-core"
version = "0.1.0"
description = "CADE voice interaction core — standalone ASR/TTS/LLM module (ROS-free)"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "numpy>=1.24.0",
    "sherpa-onnx>=1.10.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "loguru>=0.7.0",
]

[tool.setuptools.packages.find]
include = ["cade*"]
